refactor(core): make InMemoryJournalStorage thread-safe (Refs #12)