@@ -16,7 +16,6 @@
 package org.drools.journal.core;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import org.drools.journal.api.JournalRecord;
@@ -24,49 +23,42 @@ import org.drools.journal.api.JournalScanner;
 import org.drools.journal.api.JournalStorage;
 
 /**
- * Non-durable, in-process {@link JournalStorage} for use in tests.
+ * Non-durable, in-process {@link JournalStorage} for use in tests. Thread-safe.
  *
  * <p>Records are stored in a plain list; positions are zero-based list indices.
  * No files are written and no external dependencies are required.
- *
- * <p>Use {@link #appendRecord(JournalRecord)} to add records directly.
- * {@link #append(ByteBuffer)} is not supported — this implementation has no
- * wire format.
- *
- * <p>NOT thread-safe — designed for single-threaded test use only.
  */
 public class InMemoryJournalStorage implements JournalStorage {
 
-    // NOT thread-safe — designed for single-threaded test use only
     private final List<JournalRecord> records = new ArrayList<>();
     private boolean closed = false;
 
     @Override
-    public long append(final JournalRecord record) {
+    public synchronized long append(final JournalRecord record) {
         checkOpen();
         records.add(record);
         return records.size() - 1;
     }
 
     @Override
-    public JournalScanner scan(final long fromPosition) {
+    public synchronized JournalScanner scan(final long fromPosition) {
         checkOpen();
-        return new InMemoryJournalScanner(Collections.unmodifiableList(records), fromPosition);
+        return new InMemoryJournalScanner(List.copyOf(records), fromPosition);
     }
 
     @Override
-    public long latestPosition() {
+    public synchronized long latestPosition() {
         checkOpen();
         return records.isEmpty() ? -1 : records.size() - 1;
     }
 
     @Override
-    public void close() {
+    public synchronized void close() {
         closed = true;
     }
 
     /** Returns the total number of records appended so far. */
-    int size() {
+    synchronized int size() {
         return records.size();
     }
 
